JavaFx 11 compatible version